--- a/src/style.scss
+++ b/src/style.scss
@@ -69,15 +69,6 @@
   border-top: none!important;
 }
 
-.bga-popup-modal.bga-popup-modal--title-bar-grey.svelte-onjxky .bga-popup-modal__header.svelte-onjxky {
-  background: linear-gradient(180deg, $lighterSurface 0%, $surface 100%) !important;
-  color: $primary !important;
-}
-
-.bga-collection-management__row.svelte-1cqkg2v {
-  background-color: #3a3d4e !important;
-}
-
 .text-bga-gray-78 {
     color: $onSurface;
 }
